Refine docker file