@@ -3,9 +3,9 @@ set -e
 
 : ${EXT_DIR:="/bi-ext"}
 
-: ${BI_JAVA_OPTS:='-Djava.security.egd=file:/dev/./urandom -Xms4096m -Xmx4096m -Djava.awt.headless=true -Dpentaho.karaf.root.transient=true -XX:+HeapDumpOnOutOfMemoryError -XX:ErrorFile=../logs/jvm_error.log -XX:HeapDumpPath=../logs/ -verbose:gc -Xloggc:../logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -XX:+PrintHeapAtGC -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Dfile.encoding=utf8 -DDI_HOME=\"$DI_HOME\"'}
+: ${BI_JAVA_OPTS:='-Djava.security.egd=file:/dev/./urandom -Xms4096m -Xmx4096m -XX:+UseG1GC -XX:+UseStringDeduplication -XX:+PreserveFramePointer -Djava.awt.headless=true -Dpentaho.karaf.root.transient=true -XX:+HeapDumpOnOutOfMemoryError -XX:ErrorFile=../logs/jvm_error.log -XX:HeapDumpPath=../logs/ -verbose:gc -Xloggc:../logs/gc.log -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintHeapAtGC -XX:+PrintStringDeduplicationStatistics -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=2 -XX:GCLogFileSize=64M -XX:OnOutOfMemoryError=/usr/bin/oom_killer -Dsun.rmi.dgc.client.gcInterval=3600000 -Dsun.rmi.dgc.server.gcInterval=3600000 -Dfile.encoding=utf8 -DDI_HOME=\"$DI_HOME\"'}
 
-: ${PDI_HADOOP_CONFIG:="hdp23"}
+: ${PDI_HADOOP_CONFIG:="hdp24"}
 
 : ${PDI_MAX_LOG_LINES:="10000"}
 : ${PDI_MAX_LOG_TIMEOUT:="1440"}
@@ -127,44 +127,6 @@ init_biserver() {
 	fi
 }
 
-apply_changes() {
-	# you can mount a volume pointing to /pdi-ext for customization
-	if [ -d $EXT_DIR ]; then
-		# if you have custom scripts to run, let's do it
-		if [ -f $EXT_DIR/custom_install.sh ]; then
-			echo "Running custom installation script..."
-			. $EXT_DIR/custom_install.sh
-		# otherwise, simply override files based what we have under ext directory
-		elif [ "$(ls -A $EXT_DIR)" ]; then
-			echo "Copying files from $EXT_DIR to $BISERVER_HOME..."
-			/bin/cp -Rf $EXT_DIR/* .
-		fi
-	fi
-	
-	# update database configuration as required
-	if [ "$STORAGE_TYPE" != "" ] && [ -f pentaho-solutions/system/hibernate/${STORAGE_TYPE}.hibernate.cfg.xml ]; then
-		sed -i -e 's|\(<!-- \[BEGIN HSQLDB DATABASES\]\).*|\1|' tomcat/webapps/pentaho/WEB-INF/web.xml \
-			&& sed -i -e 's|.*\(\[END HSQLDB DATABASES\] -->\)|\1|' tomcat/webapps/pentaho/WEB-INF/web.xml \
-			&& sed -i -e 's|\(<!-- \[BEGIN HSQLDB STARTER\]\).*|\1|' tomcat/webapps/pentaho/WEB-INF/web.xml \
-			&& sed -i -e 's|.*\(\[END HSQLDB STARTER\] -->\)|\1|' tomcat/webapps/pentaho/WEB-INF/web.xml
-		
-		if [ -f database.env ]; then
-			echo "Updating database configuration..."
-			. database.env
-			
-			update_db
-		else
-			echo "Skip database configuration as database.env is not available"
-		fi
-	else
-		# only useful for testing / development purpose
-		# on production, you'll need to use external database like MySQL
-		if [ ! -f data/hsqldb/hibernate.properties ]; then
-			/bin/cp -rf data/.hsqldb/* data/hsqldb/.
-		fi
-	fi
-}
-
 gen_kettle_config() {
 	if [ ! -f $KETTLE_HOME/.kettle/kettle.properties ]; then
 		echo "Generating kettle.properties..."
@@ -220,12 +182,106 @@ KETTLE_DISABLE_CONSOLE_LOGGING=Y
 	fi
 }
 
+apply_patches() {
+	if [ "$APPLY_PATCHES" != "" ] && [ -f pentaho-kettle*.jar ] && [ -f pentaho-platform*.jar ]; then
+		echo "Applying patches..." \
+			&& mkdir -p patches \
+			&& unzip -q pentaho-kettle*.jar -d patches \
+			&& unzip -oq pentaho-platform*.jar -d patches \
+			&& cd patches \
+			&& $JAVA_HOME/bin/jar uf ../tomcat/webapps/pentaho/WEB-INF/lib/pdi-pur-plugin-${BISERVER_BUILD}.jar org/pentaho/di/repository/pur/LazyUnifiedRepositoryDirectory.class \
+			&& $JAVA_HOME/bin/jar uf ../pentaho-solutions/system/kettle/plugins/pdi-pur-plugin/lib/pdi-pur-plugin-${BISERVER_BUILD}.jar org/pentaho/di/repository/pur/LazyUnifiedRepositoryDirectory.class \
+			&& $JAVA_HOME/bin/jar uf ../pentaho-solutions/system/kettle/plugins/pdi-pur-plugin/pdi-pur-plugin-${BISERVER_BUILD}.jar org/pentaho/di/repository/pur/LazyUnifiedRepositoryDirectory.class \
+			&& $JAVA_HOME/bin/jar uf ../pentaho-solutions/system/pdi-pur-plugin/lib/pdi-pur-plugin-${BISERVER_BUILD}.jar org/pentaho/di/repository/pur/LazyUnifiedRepositoryDirectory.class \
+			&& $JAVA_HOME/bin/jar uf ../pentaho-solutions/system/pdi-pur-plugin/pdi-pur-plugin-${BISERVER_BUILD}.jar org/pentaho/di/repository/pur/LazyUnifiedRepositoryDirectory.class \
+			&& rm -rf org/pentaho/di/repository \
+			&& $JAVA_HOME/bin/jar uf ../tomcat/webapps/pentaho/WEB-INF/lib/kettle-core-${BISERVER_BUILD}.jar org/pentaho/di/core/database \
+			&& $JAVA_HOME/bin/jar uf ../tomcat/webapps/pentaho/WEB-INF/lib/kettle-core-${BISERVER_BUILD}.jar org/pentaho/di/core/row \
+			&& $JAVA_HOME/bin/jar uf ../tomcat/webapps/pentaho/WEB-INF/lib/kettle-core-${BISERVER_BUILD}.jar org/pentaho/di/cluster/SlaveConnectionManager*.class \
+			&& rm -rf org/pentaho/di/core/database org/pentaho/di/core/row org/pentaho/di/cluster/SlaveConnectionManager*.class \
+			&& $JAVA_HOME/bin/jar uf ../tomcat/webapps/pentaho/WEB-INF/lib/kettle-engine-${BISERVER_BUILD}.jar kettle-servlets.xml \
+			&& $JAVA_HOME/bin/jar uf ../tomcat/webapps/pentaho/WEB-INF/lib/kettle-engine-${BISERVER_BUILD}.jar org/pentaho/di \
+			&& rm -rf org/pentaho/di \
+			&& $JAVA_HOME/bin/jar uf ../tomcat/webapps/pentaho/WEB-INF/lib/pentaho-platform-scheduler-${BISERVER_BUILD}.jar org/pentaho/platform/scheduler2/quartz \
+			&& $JAVA_HOME/bin/jar uf ../tomcat/webapps/pentaho/WEB-INF/lib/pentaho-reporting-engine-classic-core-platform-plugin-${BISERVER_BUILD}.jar org/pentaho/reporting/platform/plugin/connection \
+			&& $JAVA_HOME/bin/jar uf ../tomcat/webapps/pentaho/WEB-INF/lib/pentaho-platform-core-${BISERVER_BUILD}.jar org/pentaho/platform/engine/services \
+			&& cd - \
+			&& rm -rf patches *.jar
+		
+		rm -f pentaho-solutions/system/kettle/slave-server-config.xml \
+			&& gen_kettle_config
+		
+		echo "Updating configuration..." \
+			&& sed -i -e 's|\(<bean id="IAuditEntry" class="\).*|\1org.pentaho.platform.engine.core.audit.NullAuditEntry" scope="singleton" />|' pentaho-solutions/system/pentahoObjects.spring.xml \
+			&& sed -i -e 's|\(.*<default-theme>\).*\(</default-theme>\)|\1crystal\2|' pentaho-solutions/system/pentaho.xml \
+			&& sed -i -e 's|\(<log-level>\).*\(</log-level>\)|\1INFO\2|' pentaho-solutions/system/pentaho.xml \
+			&& sed -i -e 's|\(<max-act-conn>\).*\(</max-act-conn>\)|\150\2|' pentaho-solutions/system/pentaho.xml \
+			&& sed -i -e 's|\(<sampledata-datasource>\).*|<!-- \1|' pentaho-solutions/system/pentaho.xml \
+			&& sed -i -e 's|\(</sampledata-datasource>\).*|\1 -->|' pentaho-solutions/system/pentaho.xml \
+			&& sed -i -e 's|\(<login-show-users-list>\).*\(</login-show-users-list>\)|\1false\2|' pentaho-solutions/system/pentaho.xml \
+			&& sed -i -e 's|\(<login-show-sample-users-hint>\).*\(</login-show-sample-users-hint>\)|\1false\2|' pentaho-solutions/system/pentaho.xml \
+			&& sed -i -e 's|\(<filebased-solution-cache>\).*\(</filebased-solution-cache>\)| -->\1true\2<!-- |' pentaho-solutions/system/pentaho.xml \
+			&& sed -i -e '/^#/! s/\(.*\)/#\1/g' pentaho-solutions/system/simple-jndi/jdbc.properties \
+			&& sed -i -e 's|\(\A/logout.*\Z=Anonymous\)|\1\n\\A/kettle/add.*\\Z=Admin\n\\A/kettle/allocate.*\\Z=Admin\n\\A/kettle/cleanup.*\\Z=Admin\n\\A/kettle/execute.*\\Z=Admin\n\\A/kettle/getslave.*\\Z=Admin\n\\A/kettle/next.*\\Z=Admin\n\\A/kettle/pause.*\\Z=Admin\n\\A/kettle/prepare.*\\Z=Admin\n\\A/kettle/register.*\\Z=Admin\n\\A/kettle/remove.*\\Z=Admin\n\\A/kettle/run.*\\Z=Admin\n\\A/kettle/start.*\\Z=Admin\n\\A/kettle/stop.*\\Z=Admin\n\\A/plugin/cda/api/clearCache.*\\Z=Authenticated\n\\A/plugin/saiku/api/admin/discover/refresh.*\\Z=Authenticated|' pentaho-solutions/system/applicationContext-spring-security.xml \
+			&& sed -i -e 's|\(<import resource="GettingStartedDB-spring.xml" />\).*|<!-- \1 -->|' pentaho-solutions/system/pentaho-spring-beans.xml \
+			&& sed -i -e "s|<script language='JavaScript' type='text/javascript' src='.*brightcove.com.*'></script>||" tomcat/webapps/pentaho/mantle/home/index.jsp \
+			&& sed -i -e "s|script.src = '.*brightcove.*';||" tomcat/webapps/pentaho/mantle/home/content/getting_started_launch.html \
+			&& sed -i -e 's|"<script.*brightcove.*script>";|"";|' tomcat/webapps/pentaho/mantle/home/js/gettingStarted.js \
+			&& sed -i -e 's|\(<util:list id="powerUser">\)|<util:list id="admin">\n\t\t<value>org.pentaho.security.administerSecurity</value>\n\t\t<value>org.pentaho.scheduler.manage</value>\n\t\t<value>org.pentaho.repository.read</value>\n\t\t<value>org.pentaho.repository.create</value>\n\t\t<value>org.pentaho.security.publish</value>\n\t\t</util:list>\n\t\1|' pentaho-solutions/system/defaultUser.spring.xml \
+			&& sed -i -e 's|\(<util:map id="role-mappings">\)|\1\n\t\t<entry key="Admin" value-ref="admin" />|' pentaho-solutions/system/defaultUser.spring.xml \
+			&& sed -i -e 's|\(<util:map id="defaultUserRoleMappings">\)|\1\n\t\t<entry key="viewer">\n\t\t\t<util:list><ref bean="singleTenantAuthenticatedAuthorityName"/></util:list>\n\t\t</entry>\n\t\t<!-- |' pentaho-solutions/system/defaultUser.spring.xml \
+			&& sed -i -e 's|\(<entry key-ref="singleTenantAdminUserName">\)| -->\n\t\t\1|' pentaho-solutions/system/defaultUser.spring.xml \
+			&& sed -i -e 's|\(<ref bean="singleTenantAdminAuthorityName"/>\)|\1\n\t\t\t\t<value>Admin</value>|' pentaho-solutions/system/defaultUser.spring.xml \
+			&& find . -name "*.css" | xargs sed -i -e 's|http.*googleusercontent\.com||' \
+			&& find . -name *ga.js | xargs sed -i -e 's|//www\.google\-analytics\.com||' \
+			&& find . -name *ga.js | xargs sed -i -e 's|\?"https\://ssl"\:"http\://www"|?"/":"/"|'
+	fi
+}
+
+apply_changes() {
+	apply_patches
+	
+	# you can mount a volume pointing to /pdi-ext for customization
+	if [ -d $EXT_DIR ]; then
+		# if you have custom scripts to run, let's do it
+		if [ -f $EXT_DIR/custom_install.sh ]; then
+			echo "Running custom installation script..."
+			. $EXT_DIR/custom_install.sh
+		# otherwise, simply override files based what we have under ext directory
+		elif [ "$(ls -A $EXT_DIR)" ]; then
+			echo "Copying files from $EXT_DIR to $BISERVER_HOME..."
+			/bin/cp -Rf $EXT_DIR/* .
+		fi
+	fi
+	
+	# update database configuration as required
+	if [ "$STORAGE_TYPE" != "" ] && [ -f pentaho-solutions/system/hibernate/${STORAGE_TYPE}.hibernate.cfg.xml ]; then
+		sed -i -e 's|\(<!-- \[BEGIN HSQLDB DATABASES\]\).*|\1|' tomcat/webapps/pentaho/WEB-INF/web.xml \
+			&& sed -i -e 's|.*\(\[END HSQLDB DATABASES\] -->\)|\1|' tomcat/webapps/pentaho/WEB-INF/web.xml \
+			&& sed -i -e 's|\(<!-- \[BEGIN HSQLDB STARTER\]\).*|\1|' tomcat/webapps/pentaho/WEB-INF/web.xml \
+			&& sed -i -e 's|.*\(\[END HSQLDB STARTER\] -->\)|\1|' tomcat/webapps/pentaho/WEB-INF/web.xml
+		
+		if [ -f database.env ]; then
+			echo "Updating database configuration..."
+			. database.env
+			
+			update_db
+		else
+			echo "Skip database configuration as database.env is not available"
+		fi
+	else
+		# only useful for testing / development purpose
+		# on production, you'll need to use external database like MySQL
+		if [ ! -f data/hsqldb/hibernate.properties ]; then
+			mkdir -p data/hsqldb && /bin/cp -rf data/.hsqldb/* data/hsqldb/.
+		fi
+	fi
+}
+
 # start BI server
 if [ "$1" = 'biserver' ]; then
 	init_biserver
-	gen_kettle_config
 	apply_changes
-
 	fix_permission
 	
 	# update configuration based on environment variables
